Added features to get, send, accept and reject friend requests